# ChangeLog for net-analyzer/libnasl
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/libnasl/ChangeLog,v 1.86 2010/07/11 03:43:28 ssuominen Exp $

  11 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> libnasl-2.2.9.ebuild,
  +files/libnasl-2.2.9-openssl-1.patch:
  Fix building with OpenSSL >= 1.0.0 wrt #326545.

  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org> libnasl-2.3.1.ebuild:
  Transfer Prefix keywords

  11 Apr 2007; Peter Weller <welp@gentoo.org> libnasl-2.2.9.ebuild:
  Keyworded ~x86-fbsd wrt bug 172890

*libnasl-2.2.9 (03 Apr 2007)

  03 Apr 2007; Marcelo Goes <vanquirius@gentoo.org> +libnasl-2.2.9.ebuild:
  2.2.9 version bump for bug 169466. Thanks to Jared Breland <nitro322 at
  gmail dot com>.

  26 Mar 2007; Fabian Groffen <grobian@gentoo.org> libnasl-2.3.1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  01 Feb 2007; Markus Ullmann <jokey@gentoo.org> -libnasl-2.2.7.ebuild,
  -libnasl-2.2.8.ebuild:
  cleanup

*libnasl-2.2.8 (01 Jun 2006)

  01 Jun 2006; Markus Ullmann <jokey@gentoo.org> +libnasl-2.2.8.ebuild:
  Version bump wrt bug #134036

*libnasl-2.2.7 (09 Mar 2006)

  09 Mar 2006; Marcelo Goes <vanquirius@gentoo.org> +libnasl-2.2.7.ebuild:
  2.2.7 version bump for bug 125519. Thanks to ChazeFroy <chazefroy at gmail
  dot com>.

  05 Mar 2006; Markus Ullmann <jokey@gentoo.org> libnasl-2.3.1.ebuild:
  COPYING cleanup

  19 Feb 2006; Marcelo Goes <vanquirius@gentoo.org> -libnasl-2.2.4.ebuild:
  Remove 2.2.4 ebuild.

  18 Feb 2006; Fabian Groffen <grobian@gentoo.org> libnasl-2.3.1.ebuild:
  Marked ~ppc-macos (bug #123308)

  12 Feb 2006; Marcelo Goes <vanquirius@gentoo.org> -libnasl-2.2.5.ebuild:
  Remove old ebuilds.

  07 Feb 2006; Simon Stelling <blubb@gentoo.org> libnasl-2.2.6.ebuild:
  stable on amd64

  24 Dec 2005; Michael Hanselmann <hansmi@gentoo.org> libnasl-2.2.6.ebuild:
  Stable on ppc.
