@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/libnasl
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/libnasl/ChangeLog,v 1.86 2010/07/11 03:43:28 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/libnasl/ChangeLog,v 1.87 2010/09/06 18:32:56 ssuominen Exp $
+
+  06 Sep 2010; Samuli Suominen <ssuominen@gentoo.org> -libnasl-2.2.6.ebuild:
+  Revert back to ~arch wrt #330455.
 
   11 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> libnasl-2.2.9.ebuild,
   +files/libnasl-2.2.9-openssl-1.patch:
